# citedy-reddit-writer

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  crontab.example  pyproject.toml  run-with-env.sh
.claude/commands/: citedy-reddit-writer.md
.claude/skills/citedy-reddit-writer/: SKILL.md
.codex/skills/citedy-reddit-writer/: SKILL.md
.cursor/skills/citedy-reddit-writer/: SKILL.md
.github/workflows/: publish-pypi.yml
citedy_reddit_writer/: __init__.py  __main__.py  citedy_client.py  config.py  default_config.yaml  filter_dedupe.py  reddit_fetch.py  run_once.py  setup_wizard.py  state.py
docs/: DEPLOYMENT.md
packaging/github/: ci.yml  install-workflows.sh
scripts/: push-to-citedy-remote.sh
systemd/: citedy-reddit-writer.service  citedy-reddit-writer.timer
tests/: test_reddit_fetch.py
